refactor create database spec